--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 				<input type="text" id="todo-input" placeholder="Enter a task..." />
 				<button id="add-btn" disabled><i class="fas fa-plus"></i> Add</button>
 			</div>
-			<ul id="todo-list"></ul>
+			<ul id="todo-list">
+				<p class="number-tasks text-center"></p>
+			</ul>
 		</div>
 		<script src="script.js"></script>
 	</body>
